# TacticInterpreter

./: .gitignore  README.md  pyproject.toml
tactic_interpreter/: __main__.py  cleaner.py  hole_cleaner.py  interpreter.py  parser.py  program.py  updater.py  utility.py  visualise.py
